Fix to CURRIKI-2859 - added white-space:normal; to force the wrap
svn@13516

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -931,3 +931,6 @@ body.p-CreateResources-ACELessonPlan input[type="button"] {
 .x-form-check-wrap-inner, .x-form-radio-wrap-inner {
 	font-size:12px;
 }
+.ux-mselect-item {
+	white-space:normal;
+}
